Fix styles on tablet size device

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,17 @@ a:hover, a:focus, a:active {
   margin-right: 15px;
 }
 
+@media screen and (max-width: 992px) {
+  .navbar-names {
+    font-size: 35px;
+  }
+  .probootstrap-navbar .navbar-nav > li > a {
+    padding-top: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .probootstrap-navbar .parent-nav-link-padding, .probootstrap-navbar .navbar-brand, .probootstrap-navbar .navbar-names, .probootstrap-navbar .navbar-nav > li > a {
     padding-top: 25px !important;
